# bp1000ch-controller

./: Cargo.toml  README.md
config-example/: config.toml  send-message-file-and-delete  ups-monitor.service  ups-monitor.timer  upsshutdown
src/: config.rs  handler.rs  monitor.rs  shutdown.rs  status_record.rs  ups.rs
