[package]
name = "bp1000ch-rs"
version = "0.1.0"
authors = ["Yunhao Tian <18373444@buaa.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
rand = "0.7"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "ups_monitor"
path = "src/monitor.rs"

[[bin]]
name = "ups_shutdown"
path = "src/shutdown.rs"
